ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: django-cluster-ip-service
                port:
                  name: http
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: django-cluster-ip-service
                port:
                  name: http
        
          - path: /static/admin/
            pathType: Prefix
            backend:
              service:
                name: django-cluster-ip-service
                port:
                  name: http
          - path: /static/rest_framework/
            pathType: Prefix
            backend:
              service:
                name: django-cluster-ip-service
                port:
                  name: http
          - path: /static/
            pathType: Prefix
            backend:
              service:
                name: react-cluster-ip-service
                port:
                  name: http
          - path: /media/
            pathType: Prefix
            backend:
              service:
                name: react-cluster-ip-service
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-cluster-ip-service
                port:
                  name: http
